# Names

./: .gitignore  BPE_nonname.ipynb  OLDexploration.ipynb  clustering.ipynb  entropy_position.ipynb  language_entropy.ipynb  pyproject.toml
data/: country_codes.txt  country_train_country_test_results.parquet  dists.parquet  family_train_country_test_1024_results.parquet  family_train_country_test_128_results.parquet  family_train_country_test_256_results.parquet  family_train_country_test_512_results.parquet  family_train_country_test_64_results.parquet  firstName_data_cache_6.parquet  name_dist.pickle  shared_percentage_dict.pickle  surname_dist.pickle
data/pretrained/AL/: tokenizer.json
data/pretrained/BN/: tokenizer.json
data/pretrained/BW/: tokenizer.json
data/pretrained/CZ/: tokenizer.json
data/pretrained/DE/: tokenizer.json
data/pretrained/ES/: tokenizer.json
data/pretrained/Euro Germanic/: tokenizer.json
data/pretrained/Euro Romance/: tokenizer.json
data/pretrained/FI/: tokenizer.json
data/pretrained/FR/: tokenizer.json
data/pretrained/GB/: tokenizer.json
data/pretrained/GH/: tokenizer.json
data/pretrained/HR/: tokenizer.json
data/pretrained/HU/: tokenizer.json
data/pretrained/ID/: tokenizer.json
data/pretrained/IN/: tokenizer.json
data/results/: best_bpe_vocab_stats.txt  bpe_improvement_over_huff_results.txt  country_self_evaluation_bit_cost.txt  kl_contributions.txt  kl_summary.txt  max_bpe_vocab.txt
src/names/: KL_compare.py  bpe.py  encoding_compare.py  huffman_encoder.py  ngram.py  util.py  vocab_cleaner.py
(+52 files in other folders)
